--- a/left-on-scene/src/app.css
+++ b/left-on-scene/src/app.css
@@ -1,7 +1,8 @@
 body {
-	background: #141414;
+	background: #000000 !important;
 	color: #ffffff;
 }
+
 
 .movie-app > .row {
 	overflow-x: auto;
@@ -37,4 +38,16 @@ body {
 .navbar {
 	padding-left: 10% !important;
 	padding-right: 10% !important;;
+}
+
+.logo {
+	width: 500px;
+    margin: auto;
+    display: block;
+}
+
+
+.hometext {
+	text-align: center;
+	color: white;
 }
