--- a/left-on-scene/src/app.css
+++ b/left-on-scene/src/app.css
@@ -126,3 +126,12 @@ body {
   .embed-responsive {
 	margin-top: 200px; /* Adjust the margin-top as needed to lower the trailer */
   }
+
+
+  .background-container {
+	position: relative;
+	background-image: url('../public/imgs//Directors-Slat.png');
+	background-size: 15%; /* Adjust the size as needed */
+	background-position: bottom 50px right 100px;
+	background-repeat: no-repeat;
+  }
